--- a/files/styles.css
+++ b/files/styles.css
@@ -36,7 +36,7 @@ button {
 a {
     text-decoration: none;
     font-size: 22px;
-    color: black;
+    color: rgba(255, 254, 254, 0.815);
 }
   
 button:hover, a:hover {
