--- a/files/styles.css
+++ b/files/styles.css
@@ -14,6 +14,7 @@ body {
 .card:hover {
     box-shadow: 0 8px 16px 0 rgb(65, 62, 255);
     transition: 1s;
+    transform: scale(1.5);
 }
   
 .title {
@@ -43,3 +44,7 @@ a {
 button:hover, a:hover {
     opacity: 0.7;
 }
+
+/* img:hover {
+    transform: scale(1.5);
+} */
