--- a/files/styles.css
+++ b/files/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(54, 54, 54)
+    background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
 
 .card {
@@ -9,6 +9,9 @@ body {
     margin: auto;
     text-align: center;
     transition: 1s;
+    border-radius: 10px;
+    padding: 20px;
+    
 }
 
 .card:hover {
@@ -43,6 +46,11 @@ a {
   
 button:hover, a:hover {
     opacity: 0.7;
+}
+
+.mini_spacing {
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 
