--- a/files/styles.css
+++ b/files/styles.css
@@ -43,14 +43,28 @@ a {
     font-size: 22px;
     color: rgba(0, 0, 0, 0.815);
 }
-  
-button:hover, a:hover {
-    opacity: 0.7;
-}
 
 .mini_spacing {
     margin-right: 5px;
     margin-left: 5px;
 }
 
+#social_youtube:hover {
+    color: red;
+    transition: 0.5s;
+}
+
+#social_discord:hover {
+    color: #5865F2;
+    transition: 0.5s;
+}
+
+#social_insta:hover {
+    color: #f09433; 
+    color: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+    color: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    color: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    transition: 0.5s;
+}
 
