--- a/files/styles.css
+++ b/files/styles.css
@@ -1,11 +1,28 @@
-body {
-  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+#particles-js {
+  background-color: #000;
+  display: block;
+  vertical-align: bottom;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+  -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+  transition: opacity .8s ease, transform 1.4s ease
+}
+#particles-js {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -10;
+  top: 0;
+  left: 0
 }
 
 .card {
   box-shadow: 0 10px 25px 0 rgb(0, 0, 0);
-  background-color: rgb(93, 240, 130);
+  background-color: rgb(167, 167, 167);
   max-width: 300px;
+  -moz-box-align: center;
   margin: auto;
   text-align: center;
   transition: 1s;
@@ -20,7 +37,7 @@ body {
 }
 
 .title {
-  color: grey;
+  color: rgb(43, 43, 43);
   font-size: 18px;
 }
 
