--- a/files/styles.css
+++ b/files/styles.css
@@ -1,43 +1,29 @@
-#particles-js {
-  background-color: #000;
-  display: block;
-  vertical-align: bottom;
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-  -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-  transition: opacity .8s ease, transform 1.4s ease
-}
-#particles-js {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -10;
-  top: 0;
-  left: 0
+html, body {
+  background-color: #363636;
+  height: 110%;
+	font-family: 'Poppins', sans-serif;
 }
 
 .card {
-  box-shadow: 0 10px 25px 0 rgb(0, 0, 0);
-  background-color: rgb(167, 167, 167);
+  box-shadow: 0 0 8px 4px rgb(0, 0, 0);
   max-width: 300px;
-  -moz-box-align: center;
   margin: auto;
   text-align: center;
+  background-color: #3d3d3d;
   transition: 1s;
-  border-radius: 10px;
-  padding: 20px;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgb(0, 217, 255);
-  transition: 0.7s;
-  transform: scale(1.05);
+  box-shadow: 0 0 8px 4px rgb(255, 25, 25);
+  transition: 1s;
 }
 
 .title {
-  color: rgb(43, 43, 43);
+  color: rgb(197, 197, 197);
   font-size: 18px;
 }
 
@@ -52,60 +38,246 @@ button {
   cursor: pointer;
   width: 100%;
   font-size: 18px;
+  transition: 1s;
+}
+
+.location-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+}
+
+.location-box {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
 }
 
 a {
   text-decoration: none;
-  font-size: 26px;
-  color: rgba(0, 0, 0, 0.815);
+  font-size: 22px;
+  color: rgb(207, 207, 207);
 }
 
-.mini_spacing {
-  margin-right: 5px;
-  margin-left: 5px;
+h1 {
+  font-family:  Verdana, sans-serif;
+  color: white;
 }
 
-#social_youtube:hover {
+button:hover {
+  color: #000;
+  background-color: #848686;
+  transition: 1s;
+}
+
+.services-box {
+  bottom: 1px;
+  margin: 100px;
+}
+
+.services-box h1 {
+  font-size: 30px;
+  text-align: center;
+}
+
+.services-box h1::after {
+  display: block;
+  border-bottom: 3px solid #ffffff;
+  width: 10%;
+  margin: 0 auto;
+  border-radius: 50px;
+  margin-top: 7px;
+  min-width: 70px;	
+}
+
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.service {
+  width: 250px;
+  height: 50px;
+  background-color: rgb(175, 175, 175);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  margin: 20px;
+  color: #393939;
+}
+
+.service span {
+  font-weight: bold;
+}
+
+.profile-bkg-hero-wrapper {
+  position: relative;
+  overflow: hidden;
+  height: 460px;
+  background-image: url(/images/background.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 767px) {
+  .profile-bkg-hero-wrapper {
+    height: 125px;
+  }
+}
+
+.slice-div {
+  position:absolute;
+  left:0;
+  top:auto;
+  right:0;
+  height:200px;
+  background-color:#f4f4f7;
+  opacity:1;
+}
+.slice-div.slice-div-large {
+  left:0;
+  top:345px;
+  right:0;
+  bottom:auto;
+  height:100%;
+  -webkit-transform:skew(-7deg,0deg) rotate(-6.5deg);
+  -ms-transform:skew(-7deg,0deg) rotate(-6.5deg);
+  transform:skew(-7deg,0deg) rotate(-6.5deg)
+}
+.slice-div.slice-div-large.slice-div-large-void {
+  background-color:#363636
+}
+.slice-div.slice-div-large {
+  left: -1%;
+}
+
+.yt {
+  transition: 1s;
+}
+.yt:hover {
   color: red;
-  transition: 0.5s;
+  transition: 1s;
+}
+.instagram {
+  transition: 1s;
+}
+.instagram:hover {
+  color: #ae00ff;
+  transition: 1s;
+}
+.discord {
+  transition: 1s;
+}
+.discord:hover {
+  color: #5865F2;
+  transition: 1s;
 }
 
-#social_discord:hover {
-  color: #5865f2;
-  transition: 0.5s;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+
+.about-us {
+  height: 70vh;
+  width: 100%;
+  padding: 400px 0;
 }
-#social_loco:hover {
-  content: url(https://cdn.discordapp.com/attachments/970594454517993482/1007153402406506496/loco_white.png);
-  height: 0.90em;
-  width: 0.90em;
+.pic {
+  height: auto;
+  box-shadow: 0 0 4px 2px rgb(255, 25, 25);
+  width: 302px;
+}
+.about {
+  width: 1130px;
+  max-width: 85%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.text{
+  width: 540px;
+  color: #ffffff;
+}
+.text h2{
+  font-size: 70px;
+  font-weight: 600;
+  margin-bottom: 10px;
+
+}
+.text h5{
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.text .para{
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1px;
 }
 
-#social_insta:hover {
-  color: #f09433;
-  color: -moz-linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  color: -webkit-linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  color: linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-  transition: 0.5s;
+@media screen and (max-width: 700px) {
+  .card {
+    max-width: 250px;
+  }
+  .title {
+    color: rgb(197, 197, 197);
+    font-size: 12px;
+  }
+  
+  button {
+    padding: 4px;
+    width: 100%;
+    font-size: 12px;
+    transition: 1s;
+  }
+
+  .about-us {
+    height: 70vh;
+    width: 100%;
+    padding: 500px 0;
+    padding-top: 600px;
+  }
+
+  .pic {
+    height: auto;
+    box-shadow: 0 0 4px 2px rgb(255, 25, 25);
+    width: 302px;
+  }
+
+  .text{
+    width: 540px;
+    color: #ffffff;
+  }
+  .text h2 {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  
+  }
+  .text h5{
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+  .text .para{
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: 1px;
+  }
 }
+
+
+
